# DockStart

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT.md  README.md  THIRD_PARTY_NOTICES.md  design-qa.md
.workbuddy/memory/: 2026-06-25.md  MEMORY.md
1/demo_project/: project.json
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.assisted.conf.json  tauri.basic.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
backend/adapters/: __init__.py  meeko_adapter.py  python_adapter.py  rdkit_adapter.py  reference_rmsd_worker.py  viewer_adapter.py  vina_adapter.py
backend/dockstart_core/: __init__.py  advanced_protocols.py  capabilities.py  (+23 more)
docs/: DockStart_Vina_Full_Feature_Roadmap.md  demo_projects.md  faq.md  license_notes.md  manual_pdbqt_preparation.md  roadmap.md  scientific_capability_plan.md  smoke_test.md  toolchain_design.md  toolchain_repair_guide.md  toolchain_runtime.md  user_guide.md
resources/: toolchain_manifest.json
scripts/: build_windows_assisted_release.ps1  build_windows_release.ps1  dependency_license_bundle.py  export_toolchain_environment.py  fetch_assisted_sources.py  hash_release_artifacts.py  prepare_assisted_release_resources.py  prepare_basic_release_resources.py  prepare_bundled_python.py  prepare_bundled_vina.py  verify_assisted_release.py  verify_basic_release.py  verify_installed_assisted_release.py  verify_installed_basic_release.py
(+194 files in other folders)
