[package]
name = "dockstart-desktop"
version = "0.8.3"
description = "DockStart desktop shell"
authors = ["DockStart contributors"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
